fix: text getting cropped

--- a/src/components/@core/dashboard/card/card.scss
+++ b/src/components/@core/dashboard/card/card.scss
@@ -15,6 +15,7 @@
     overflow: hidden;
     white-space: nowrap;
     margin: 0;
+    line-height: 1.2em;
   }
   p {
     font-weight: 100;
